Updated Banking application